# live_spectrogram

./: CMakeLists.txt  LICENSE  README.md  main.cpp  utility.h
binary/fftw/lib/: libfftw3.so.3.6.10
binary/fftw/lib/pkgconfig/: fftw3.pc  fftw3f.pc
binary/rtaudio/lib/: librtaudio.so.6
binary/rtaudio/lib/pkgconfig/: rtaudio.pc
components/: MainWindow.cpp  MainWindow.h  MelLogScaleEngine.cpp  MelLogScaleEngine.h  MelLogTransform.cpp  MelLogTransform.h  MelSpectrogramPlot.hpp  MfccPlot.hpp  SpectrogramPlot.hpp
lib/: mfcc.hpp  semaphore.hpp
pc/: consumer.cpp  consumer.h  producer.cpp  producer.h  task.cpp  task.h
